--- a/MercadOn/MercadOn/MercadOn.csproj
+++ b/MercadOn/MercadOn/MercadOn.csproj
@@ -290,6 +290,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Cadastro\Cadastro_cliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
