--- a/MercadOn/MercadOn/MercadOn.csproj
+++ b/MercadOn/MercadOn/MercadOn.csproj
@@ -332,6 +332,7 @@
     <Content Include="Views\Cadastro\Cadastro_cliente.cshtml" />
     <Content Include="Views\Home\QuemSomos.cshtml" />
     <Content Include="Views\Home\Contato.cshtml" />
+    <Content Include="Views\Shared\_LayoutSite.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
