--- a/MercadOn/MercadOn/MercadOn.csproj
+++ b/MercadOn/MercadOn/MercadOn.csproj
@@ -156,9 +156,29 @@
     <Compile Include="Repository\Entities\ProdutoEntity.cs" />
     <Compile Include="Repository\Entities\SubcategoriaEntity.cs" />
     <Compile Include="Repository\Entities\UsuarioEntity.cs" />
-    <Compile Include="Service\Login_service.cs" />
+    <Compile Include="Service\Base\IService.cs" />
+    <Compile Include="Service\Base\ServiceBase.cs" />
+    <Compile Include="Service\UsuarioService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\alertify\alertify.js" />
+    <Content Include="Content\alertify\alertify.min.js" />
+    <Content Include="Content\alertify\css\alertify.css" />
+    <Content Include="Content\alertify\css\alertify.min.css" />
+    <Content Include="Content\alertify\css\alertify.rtl.css" />
+    <Content Include="Content\alertify\css\alertify.rtl.min.css" />
+    <Content Include="Content\alertify\css\themes\bootstrap.css" />
+    <Content Include="Content\alertify\css\themes\bootstrap.min.css" />
+    <Content Include="Content\alertify\css\themes\bootstrap.rtl.css" />
+    <Content Include="Content\alertify\css\themes\bootstrap.rtl.min.css" />
+    <Content Include="Content\alertify\css\themes\default.css" />
+    <Content Include="Content\alertify\css\themes\default.min.css" />
+    <Content Include="Content\alertify\css\themes\default.rtl.css" />
+    <Content Include="Content\alertify\css\themes\default.rtl.min.css" />
+    <Content Include="Content\alertify\css\themes\semantic.css" />
+    <Content Include="Content\alertify\css\themes\semantic.min.css" />
+    <Content Include="Content\alertify\css\themes\semantic.rtl.css" />
+    <Content Include="Content\alertify\css\themes\semantic.rtl.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
