Tela escolher mercado

--- a/MercadOn/MercadOn/MercadOn.csproj
+++ b/MercadOn/MercadOn/MercadOn.csproj
@@ -243,6 +243,20 @@
     <Content Include="Content\StyleLogin\vendor\select2\select2.js" />
     <Content Include="Content\StyleLogin\vendor\select2\select2.min.css" />
     <Content Include="Content\StyleLogin\vendor\select2\select2.min.js" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\css\Footer-Basic.css" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\css\Lightbox-Gallery.css" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\01.jpg" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\02.jpg" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\03.jpg" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\building.jpg" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\desk.jpg" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\loft.jpg" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\logo-login.png" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\img\Mercadon.png" />
+    <Content Include="Content\StylePaginaEscolhaMercado\assets\js\jquery.min.js" />
+    <Content Include="Content\StylePaginaEscolhaMercado\untitled.html" />
     <Content Include="Content\StylePaginaProdutos\.gitignore" />
     <Content Include="Content\StylePaginaProdutos\coca-cola-20oz-bottles.jpg" />
     <Content Include="Content\StylePaginaProdutos\colgate-target-variety-pack.jpg" />
