--- a/MercadOn/MercadOn/MercadOn.csproj
+++ b/MercadOn/MercadOn/MercadOn.csproj
@@ -128,8 +128,10 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MercadoController.cs" />
     <Compile Include="Controllers\MercadoProdutoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -142,8 +144,23 @@
     <Compile Include="Migrations\201911210121149_add-tabela-administrador2.designer.cs">
       <DependentUpon>201911210121149_add-tabela-administrador2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912040210520_add_tabela_clientes.cs" />
+    <Compile Include="Migrations\201912040210520_add_tabela_clientes.designer.cs">
+      <DependentUpon>201912040210520_add_tabela_clientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201912041809472_add_tabela_mercados.cs" />
+    <Compile Include="Migrations\201912041809472_add_tabela_mercados.designer.cs">
+      <DependentUpon>201912041809472_add_tabela_mercados.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201912041834031_add_tabela_mercados_v2.cs" />
+    <Compile Include="Migrations\201912041834031_add_tabela_mercados_v2.designer.cs">
+      <DependentUpon>201912041834031_add_tabela_mercados_v2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Cliente\ClienteModel.cs" />
     <Compile Include="Models\Login\LoginModel.cs" />
+    <Compile Include="Models\Mercado\MercadoDetail.cs" />
+    <Compile Include="Models\Mercado\MercadoModel.cs" />
+    <Compile Include="Models\Mercado\NovoMercadoDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Configuration.cs" />
     <Compile Include="Repository\ContextMercadOn.cs" />
@@ -160,6 +177,8 @@
     <Compile Include="Repository\Entities\UsuarioEntity.cs" />
     <Compile Include="Service\Base\IService.cs" />
     <Compile Include="Service\Base\ServiceBase.cs" />
+    <Compile Include="Service\ConsumidorService.cs" />
+    <Compile Include="Service\MercadoService.cs" />
     <Compile Include="Service\UsuarioService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +204,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\buscar.png" />
     <Content Include="Content\Style Pagina inicial\assets\bootstrap\css\bootstrap.min.css" />
     <Content Include="Content\Style Pagina inicial\assets\img\01.jpg" />
     <Content Include="Content\Style Pagina inicial\assets\img\02.jpg" />
@@ -424,6 +444,17 @@
     <Content Include="Views\Home\Contato.cshtml" />
     <Content Include="Views\Home\CadastrarCliente.cshtml" />
     <Content Include="Views\MercadoProduto\MercadoProduto.cshtml" />
+    <Content Include="Views\MercadoProduto\Mercados.cshtml" />
+    <Content Include="Views\Home\CadastrarMercado.cshtml" />
+    <Content Include="Views\MercadoProduto\Produto.cshtml" />
+    <Content Include="Views\Shared\_LayoutCliente.cshtml" />
+    <Content Include="Views\Shared\_LayoutMercado.cshtml" />
+    <Content Include="Views\Cliente\Index.cshtml" />
+    <Content Include="Views\Cliente\Editar.cshtml" />
+    <Content Include="Views\Mercado\Mercados.cshtml" />
+    <Content Include="Views\Cliente\Pedidos.cshtml" />
+    <Content Include="Views\Mercado\Pedido.cshtml" />
+    <Content Include="Views\Mercado\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -455,6 +486,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911210121149_add-tabela-administrador2.resx">
       <DependentUpon>201911210121149_add-tabela-administrador2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912040210520_add_tabela_clientes.resx">
+      <DependentUpon>201912040210520_add_tabela_clientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912041809472_add_tabela_mercados.resx">
+      <DependentUpon>201912041809472_add_tabela_mercados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912041834031_add_tabela_mercados_v2.resx">
+      <DependentUpon>201912041834031_add_tabela_mercados_v2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
